data/diff_tests/wasmtime/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3891.wast
;; 10. **Test Description**:     - **Scenario**: Create a circular module dependency where Module A calls Module B, and Module B calls back Module A.     - **Constraint**: Ensure correct control flow tracking and module boundary handling in circular dependencies.     - **Differential Check**: Confirm that both WebAssembly and wizard_engine implementations correctly manage circular `call` dependencies without leading to stack overflows or incorrect execution flow.

(assert_invalid
  (module
    (import "moduleB" "funcB" (func $funcB (param i32)))
    (func $funcA (param i32)
      (call $funcB (local.get 0))
    )
  )
  "type mismatch"
)